// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Statusbar renders correctly 1`] = `
<div
  className="statusbar"
>
  <Spinner
    isLoading={false}
  />
  <Icon
    name="info"
  />
  <span>
    test-status
  </span>
</div>
`;

exports[`Tests for Statusbar renders correctly when loading 1`] = `
<div
  className="statusbar"
>
  <Spinner
    isLoading={true}
  />
  <span>
    test-status
  </span>
</div>
`;
